# Data-Engine-Synonym-System

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.streamlit  LICENSE  README.md  docker-compose.yml  init-db.sh  pyproject.toml  pytest.ini  streamlit_app.py
app/: config.py  main.py
app/api/: routes.py
app/cache/: base.py  factory.py  memory_cache.py  redis_cache.py
app/database/: connection.py  repository.py
app/models/: synonym.py
app/services/: synonym_service.py
tests/: test_api.py
