[project]
name = "data-engine-synonym-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.120.2",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.1",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "pytest-dotenv>=0.5.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
